--- a/index.html
+++ b/index.html
@@ -1,7 +1,42 @@
 <html>
   <head>
     <title>Vote2016.com</title>
+    <meta description="Compare and contrast the 2016 presidential candidates' policies.">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="layout" type="text/javascript" href="js/layout.js">
   </head>
+  
+    <header class="header">
+      
+      <nav class="navbar navbar-default navbar-static-top">
+  <div class="container">
+    <h1> Vote2016.com </h1>
+
+    
+    <!--      <div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Info<span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact Us</a></li>
+  </ul> -->
+<!-- </div> -->
+  </div>
+</nav>
+  </header>
+  <body>
+    <div class = "background"> </div>
+   <center class = "candidates"> 
+    <img id="sanders" src="img/sanders.png" alt = "sanders">
+     <div id="s_name">Bernie Sanders</div>
+     <div id="s_policy">Blah</div>
+    <img id="hilary" src="img/hilary.png" alt = "hilary">
+    <img id="o'malle" src="img/o'malle.png" alt = "o'malle">
+    <img id="bush" src="img/bush.png" alt = "bush">
+    <img id="rubio" src="img/rubio.png" alt = "rubio">
+    <img id="trump" src="img/trump.png" alt = "trump">
+    </center>
+		<div id="footer"><p>Alexandra Milich & Celia Heath </p></div>  
+  </body>
 </html>
